Removed Fighter Implemented further steps of the game Made MainView into a singleton