@@ -7,6 +7,7 @@ import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
 import java.beans.PropertyChangeSupport;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -16,52 +17,80 @@ public class Field implements PropertyChangeListener {
 
 	public final FieldProperties fieldProperties;
 
-	public final List<Fighter> leftSide = new ArrayList<>();
-	public final List<Fighter> rightSide = new ArrayList<>();
+	public final List<Soldier> leftSide = new ArrayList<>();
+	public final List<Soldier> rightSide = new ArrayList<>();
 
-	private List<Fighter> attackOrder = new ArrayList<>();
+	private List<Soldier> attackOrder = new ArrayList<>();
+
+	private boolean isControlled = false;
 
 	public Field(FieldProperties fieldProperties) {
 		this.fieldProperties = fieldProperties;
 	}
 
-	public void assignSoldiers() {
-		Player[] players = GameController.players;
-		for (int i = 0; i < players.length; i++) {
-			for (Soldier soldier : players[i].soldiers) {
-				if (soldier.assignedField == fieldProperties) {
-					(i < 1 ? leftSide : rightSide).add(soldier);
-					soldier.addObserver(this);
-				}
-			}
+	public void addSoldier(Soldier soldier) {
+		soldier.sendToField(fieldProperties);
+		if (Arrays.stream(GameController.players[0].soldiers).anyMatch(soldier1 -> soldier1 == soldier)) {
+			leftSide.add(soldier);
+			changeSupport.firePropertyChange("soldierP1Added", null, soldier);
+		} else if (Arrays.stream(GameController.players[1].soldiers).anyMatch(soldier1 -> soldier1 == soldier)) {
+			rightSide.add(soldier);
+			changeSupport.firePropertyChange("soldierP2Added", null, soldier);
+		}
+	}
+
+	public void removeSoldier(Soldier soldier) {
+		soldier.sendToField(null);
+		if (leftSide.stream().anyMatch(soldier1 -> soldier1 == soldier)) {
+			leftSide.remove(soldier);
+			changeSupport.firePropertyChange("soldierRemoved", soldier, null);
+		} else if (rightSide.stream().anyMatch(soldier1 -> soldier1 == soldier)) {
+			rightSide.remove(soldier);
+			changeSupport.firePropertyChange("soldierRemoved", soldier, null);
 		}
 	}
 
 	public void setAttackOrder() {
 		attackOrder.addAll(leftSide.stream().toList());
 		attackOrder.addAll(rightSide.stream().toList());
-		attackOrder = attackOrder.stream().sorted(Comparator.comparingInt(Fighter::getInitiative)).collect(Collectors.toList());
+		attackOrder = attackOrder.stream().sorted(Comparator.comparingInt(Soldier::getInitiative)).collect(Collectors.toList());
 		changeSupport.firePropertyChange("initialSoldierAmount", 0, attackOrder.size());
 	}
 
-	public void battle() {
-		attackOrder = attackOrder.stream().filter(Fighter::isAlive).collect(Collectors.toList());
-		List<Fighter> left = leftSide.stream().filter(Fighter::isAlive).toList();
-		List<Fighter> right = rightSide.stream().filter(Fighter::isAlive).toList();
+	public boolean battle() {
+		if (!isControlled) {
+			attackOrder = attackOrder.stream().filter(Soldier::isAlive).collect(Collectors.toList());
+			List<Soldier> left = leftSide.stream().filter(Soldier::isAlive).toList();
+			List<Soldier> right = rightSide.stream().filter(Soldier::isAlive).toList();
 
-		if (left.size() < 1 || right.size() < 1) {
-			GameController.battleContinues = false;
-			changeSupport.firePropertyChange("battleState", true, false);
-		} else {
-			Fighter fighter = attackOrder.get(0);
-			if (left.contains(fighter)) {
-				fighter.attack(right);
+			if (left.size() < 1 || right.size() < 1) {
+				changeSupport.firePropertyChange("battleState", true, false);
+				isControlled = true;
+				return false;
 			} else {
-				fighter.attack(left);
+				Soldier soldier = attackOrder.get(0);
+				if (left.contains(soldier)) {
+					soldier.attack(right);
+				} else {
+					soldier.attack(left);
+				}
+				attackOrder.remove(soldier);
+				attackOrder.add(soldier);
+
+				return getController() == null;
 			}
-			attackOrder.remove(fighter);
-			attackOrder.add(fighter);
 		}
+		return true;
+	}
+
+	public Player getController() {
+		if (leftSide.stream().noneMatch(Soldier::isAlive)) return GameController.players[1];
+		else if (rightSide.stream().noneMatch(Soldier::isAlive)) return GameController.players[0];
+		else return null;
+	}
+
+	public boolean contains(Soldier soldier) {
+		return leftSide.contains(soldier) || rightSide.contains(soldier);
 	}
 
 	///////////////////////////////////////////////////////////////////////////
@@ -76,7 +105,7 @@ public class Field implements PropertyChangeListener {
 	public void propertyChange(PropertyChangeEvent evt) {
 		if (evt.getPropertyName().equals("dead")) {
 			long totalSoldiers = leftSide.size() + rightSide.size();
-			long soldiersLeft = attackOrder.stream().filter(Fighter::isAlive).count();
+			long soldiersLeft = attackOrder.stream().filter(Soldier::isAlive).count();
 			changeSupport.firePropertyChange("soldierAmount", totalSoldiers, soldiersLeft);
 		}
 	}
